// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge snapshot color blue 1`] = `
<div
  class="absolute border-solid border-gray-200 text-center font-medium uppercase leading-none antialiased p-1 w-2 h-2 rounded-full -top-1 right-1"
/>
`;

exports[`Badge snapshot color gray 1`] = `
<div
  class="absolute border-solid border-gray-200 text-center font-medium uppercase leading-none antialiased p-1 w-2 h-2 bg-gray-200 text-gray-800 rounded-full -top-1 right-1"
/>
`;

exports[`Badge snapshot color green 1`] = `
<div
  class="absolute border-solid border-gray-200 text-center font-medium uppercase leading-none antialiased p-1 w-2 h-2 rounded-full -top-1 right-1"
/>
`;

exports[`Badge snapshot position bottom 1`] = `
<div
  class="absolute border-solid border-gray-200 text-center font-medium uppercase leading-none antialiased p-1 w-2 h-2 bg-gray-200 text-gray-800 rounded-full bottom-0 right-0"
/>
`;

exports[`Badge snapshot position top 1`] = `
<div
  class="absolute border-solid border-gray-200 text-center font-medium uppercase leading-none antialiased p-1 w-2 h-2 bg-gray-200 text-gray-800 rounded-full -top-1 right-1"
/>
`;

exports[`Badge snapshot shape circle 1`] = `
<div
  class="absolute border-solid border-gray-200 text-center font-medium uppercase leading-none antialiased p-1 w-2 h-2 bg-gray-200 text-gray-800 rounded-full -top-1 right-1"
/>
`;

exports[`Badge snapshot shape square 1`] = `
<div
  class="absolute border-solid border-gray-200 text-center font-medium uppercase leading-none antialiased p-1 w-2 h-2 bg-gray-200 text-gray-800 rounded-sm -top-1 right-1"
/>
`;

exports[`Badge snapshot size size 1`] = `
<div
  class="absolute border-solid border-gray-200 text-center font-medium uppercase leading-none antialiased p-1 w-4 h-4 bg-gray-200 text-gray-800 rounded-full -top-1 right-1"
/>
`;

exports[`Badge snapshot size sm 1`] = `
<div
  class="absolute border-solid border-gray-200 text-center font-medium uppercase leading-none antialiased p-1 w-2 h-2 bg-gray-200 text-gray-800 rounded-full -top-1 right-1"
/>
`;
